<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
            <LinearLayout style="@style/demo_layout">
                <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/portrait_game_entrance" />
                <Button android:textColor="@android:color/black" android:id="@id/btn_portrait_game" android:text="@string/click_go" style="@style/demo_btn" />
            </LinearLayout>
            <LinearLayout style="@style/demo_layout">
                <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/landscape_game_entrance" />
                <Button android:textColor="@android:color/black" android:id="@id/btn_landscape_game" android:text="@string/click_go" style="@style/demo_btn" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:baselineAligned="false">
            <LinearLayout style="@style/demo_layout">
                <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/portrait_flow_test" />
                <Button android:textColor="@android:color/black" android:id="@id/btn_portrait_flow_test" android:text="@string/flow_test" style="@style/demo_btn" />
            </LinearLayout>
            <LinearLayout style="@style/demo_layout">
                <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/landscape_flow_test" />
                <Button android:textColor="@android:color/black" android:id="@id/btn_landscape_flow_test" android:text="@string/flow_test" style="@style/demo_btn" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>